# didactic_notebooks

./: README.md  jpaTheory.ipynb  main.py  pyproject.toml  sandbox.ipynb  sandbox.py
rise_presentations/: 1-qubitEvolution.ipynb  1-qubitGates.ipynb
